# flask-web-app

./: README.md
flask-tutorial/flaskr/: __init__.py  auth.py  blog.py  db.py  pyproject.toml
flask-tutorial/flaskr/templates/blog/: index.html  update.html
flask-tutorial/instance/: flaskr.sqlite
flask-tutorial/tests/: conftest.py  test_db.py
